// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Bolt text-link Props icon after 1`] = `
<a href="https://pega.com"
   target="_blank"
   class="e-bolt-text-link"
>
  This is a text link
  <span class="e-bolt-text-link__icon-after"
        aria-hidden="true"
  >
    <bolt-icon name="chevron-right"
               aria-hidden="true"
    >
      <span class="c-bolt-icon c-bolt-icon--chevron-right">
        <svg class="c-bolt-icon__icon"
             xmlns="http://www.w3.org/2000/svg"
             viewbox="0 0 32 32"
        >
          <path fill="var(--bolt-theme-icon, currentColor)"
                fill-rule="evenodd"
                d="M13 7c-.6-.5-1.4-.5-2 0-.5.6-.5 1.4 0 2l7.1 7-7 7a1.3 1.3 0 00.9 2.3c.3 0 .7-.1 1-.4l8-8c.5-.5.5-1.3 0-1.8l-8-8z"
          >
          </path>
        </svg>
      </span>
    </bolt-icon>
  </span>
</a>
`;

exports[`Bolt text-link Props reverse underline 1`] = `
<a href="https://pega.com"
   target="_blank"
   class="e-bolt-text-link e-bolt-text-link--reversed-underline"
>
  This is a text link
</a>
`;

exports[`Bolt text-link default 1`] = `
<a href="https://pega.com"
   target="_blank"
   class="e-bolt-text-link"
>
  This is a text link
</a>
`;
